tests/baselines/reference/ES5For-of24.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of24.ts(2,1): error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of24.ts (1 errors) ====
    var a = [1, 2, 3];
    for (var v of a) {
    ~~~
!!! error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.
        let a = 0;
    }